<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sort_by_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            android:text="@string/sort_by"
            android:textSize="32sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/clear_filter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sort_by_text_view"
            app:layout_constraintBottom_toBottomOf="@id/sort_by_text_view"
            android:layout_marginEnd="16dp"
            android:text="@string/reset_filters"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/sort_radio_group"
            app:layout_constraintTop_toBottomOf="@id/sort_by_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/created_date_newest_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="created date, newest"/>

            <RadioButton
                android:id="@+id/created_date_oldest_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="created date, oldest"/>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/filter_by_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sort_radio_group"
            android:layout_margin="16dp"
            android:text="Filter by:"
            android:textSize="32sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/choose_pet_type_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/filter_by_text_view"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:textColorHint="@color/md_theme_light_background">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/choose_pet_type_edit_text"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:text="@string/choose_pet_type"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:id="@+id/choose_pet_breed_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_pet_type_input_layout"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:textColorHint="@color/md_theme_light_background">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/choose_pet_breed_edit_text"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:text="@string/choose_pet_breed"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_pet_breed_input_layout"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/age"/>

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/age_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1"
            android:value="0"
            android:valueFrom="0"
            android:valueTo="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_text_view"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_slider"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/is_this_order_temporary"/>

        <RadioGroup
            android:id="@+id/temp_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/temp_text_view"
            app:layout_constraintTop_toTopOf="@id/temp_text_view"
            app:layout_constraintBottom_toBottomOf="@id/temp_text_view"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/litter_box_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_radio_group"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/is_this_pet_litter_box_trained"/>

        <RadioGroup
            android:id="@+id/litter_box_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/litter_box_text_view"
            app:layout_constraintTop_toTopOf="@id/litter_box_text_view"
            app:layout_constraintBottom_toBottomOf="@id/litter_box_text_view"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vaccinated_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/litter_box_radio_group"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:text="@string/is_this_pet_litter_box_trained"/>

        <RadioGroup
            android:id="@+id/vaccinated_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/vaccinated_text_view"
            app:layout_constraintTop_toTopOf="@id/vaccinated_text_view"
            app:layout_constraintBottom_toBottomOf="@id/vaccinated_text_view"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>

        </RadioGroup>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/notify_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintTop_toBottomOf="@id/vaccinated_radio_group"
            android:text="@string/notify"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/notify_checkbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="32dp"
            android:text="@string/submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>